Fix horizontal scrolling.

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -877,7 +877,7 @@ dt {
 }
 .footer {
   color: rgba(255, 255, 255, 0.87);
-  padding: 16px 8px 8px 8px;
+  padding: 16px 0 8px 0;
   margin: 0 0 0 0;
   position: absolute;
   width: 100%;
